--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section>
             <div class="headerInfo">
-                <h1>Start <span class="h1Blue">saving money </span> <br> on your next tranfer</h1>
+                <h1 class="h1Header">Start <span class="h1Blue">saving money </span> <br> on your next tranfer</h1>
                 <h3 class="h3Header"> join over 4 million people who get the real exchange rate with Paywise. <br> We're on average x8 cheaper than leading high street banks.</h3>
                 <div class="search">
                     <div class="iconCountry dolar">Your Send <br> 
@@ -32,7 +32,9 @@
                             <option>$ 1,000</option>
                              <option>United Kindom</option>
                             <option>Europe</option>
-                        </select> <img src="./img/ReinoUnido.png"></div>
+                        </select> <img src="./img/ReinoUnido.png">
+                    </div>
+                    
                     <div class="iconCountry euro">They Receive <br>
                         <select name="country">
                             <option>€ 1,154.47</option>
@@ -119,6 +121,9 @@
 
                
     </section>
+    <span class="backgroundWorld"><img src="./img/backgroundWorld.webp" alt="">
+
+    </span>
     <footer></footer>
 
     <script src="main.js"></script>
